src/play/play.css
.play-page #player-progress, #opponent-progress {
    height: 70px;
    padding: 2px 6px;
}

.play-page main h1 {
    margin: 0;
}

.play-page #word-entry {
    flex-grow: 1;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.play-page #word-entry form {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.play-page #word-entry input {
    background-color: rgba(0,0,0,0);
    height: 60px;
    font-size: 60px;
    animation: blink 1s infinite;
    border: none;
    margin: 10px 0;
    margin-bottom: 0px;
    text-align: center;
}
.play-page #word-entry input::placeholder {
    color: black;
    text-align: center;
}

.play-page #word-entry input:focus {
    animation: none;
    border: none;
    outline: none;
    caret-color: transparent;
}

@keyframes blink {
    0%, 100% {
        opacity: 0;
    }
    50% {
        opacity: 1;
    }
}

.play-page #word-entry button {
    margin: 10px;
    height: 40px;
    width: 100px;
    border-radius: 20px;
    border: none;
    background-color: black;
    color: white;
    font-size: large;
}

.play-page #word-entry button:hover {
    background-color: rgba(0, 0, 0, 0.45);
}


.play-page .progress {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 90%;
    max-width: 400px;
    margin: 4px 0;
}

.play-page .top-row, .bottom-row {
    width: 100%;
    display: flex;
    justify-content: space-between;

}

.play-page .top-row {
    margin-bottom: 5px;
}

.play-page .top-row .cell:nth-child(1),
.play-page .top-row .cell:nth-child(2),
.play-page .top-row .cell:nth-child(3),
.play-page .top-row .cell:nth-child(4){
    background-color: black;
    color: white;
}

.play-page .top-row .cell:nth-child(5){
    border-width: 3px;
    font-weight: bold;
    animation: jump 5s infinite ease-in ;
}

@keyframes jump {
    3% {
        transform: translateY(-4px);
    }
    6% {
        transform: translateY(0px);
    }
    9% {
        transform: translateY(-2px);
    }
    12% {
        transform: translateY(0px);
    }
    end {
        transform: translateY(0px);
    }
}

.play-page .cell {
    font-size: 14px;
    width: 24px;
    height: 24px;
    padding: 0;
    margin: 0;
    text-align: center;
    align-content: center;
    border: thin black solid;
    border-radius: 100%;
    box-sizing: border-box;
}


/*----------to add opponent progress-----------*/

/* comment this out */
/*
#opponent-progress{
    display: none;
}
*/

/* uncomment this */
.play-page #opponent-progress p {
    padding: 0;
    margin: 6px 0;
}
.play-page #player-progress {
    border: solid black thin;
    border-radius: 20px;
}



/*------------------------------------KEYBOARD-----------------*/

.play-page .keyboard {
    height: 200px;
    width: 100%;
    max-width: 380px;
    padding: 10px 0;
    box-sizing: border-box;

    display: flex;
    flex-direction: column;
}

.play-page .keyboard-row {
    display: flex;
    flex-direction: row;
    justify-content: center;
    padding-bottom: 10px;
}

.play-page .key {
    border: none;
    height: 50px;
    width: 35px;
    margin: 0 2px;
    text-align: center;
    align-content: center;
    box-sizing: border-box;
    border-radius: 10px;
    background-color: black;
    color: white;
    font-weight: bold;
}

.play-page .key:hover {
    background-color: rgba(0, 0, 0, 0.45);
}

